Scrollbar fix on submithover

--- a/Styles/globalstyles.css
+++ b/Styles/globalstyles.css
@@ -12,7 +12,7 @@ a{
 	display:block;
 }
 
-body,html{height:100%;margin:0;}
+body,html{height:100%;margin:0;overflow:hidden;}
 
 nav.subnav >li > a{display:inline;}
 
